# Demo_MessageChat_Qt

./: CMakeLists.txt  Demo_MessageChat_Qt.pro  README.md  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
chatmessage/: qnchatmessage.cpp  qnchatmessage.h
